# agent-example

./: .gitignore  Inference.py  README.md  app.py  main.py  pyproject.toml  requirements.txt  server.py  ws_server.py
cnn/: label-openai.py
cnn/datasets/: data.yaml
cnn/datasets/augmented_annotations/: aug_02.json  aug_03.json  aug_06.json  aug_08.json  aug_10.json  aug_11.json  aug_13.json  aug_15.json  aug_16.json  aug_19.json  aug_21.json  aug_26.json  aug_27.json  aug_29.json  aug_30.json  aug_35.json  aug_37.json  aug_39.json
cnn/datasets/labels/: val.cache
cnn/datasets/yolo_labels/: aug_07.txt  aug_08.txt  aug_10.txt  aug_13.txt  aug_17.txt  aug_25.txt  aug_27.txt  aug_32.txt  aug_34.txt  aug_36.txt
events/: handlers.py
extension/: background.js  content.js  manifest.json  sidepanel.html  sidepanel.js
model/: augementation.py  convert_labelme_to_yolo.py  label-openai.py  spilit_datasets.py
model/datasets/: data.yaml  train_yolo8.py
model/datasets/augmented_annotations/: aug_01.json  aug_07.json  aug_12.json  aug_20.json  aug_22.json  aug_23.json  aug_24.json  aug_28.json  aug_33.json  aug_34.json  aug_38.json  aug_40.json
model/datasets/labels/: train.cache
model/datasets/yolo_labels/: aug_09.txt  aug_15.txt  aug_26.txt  aug_28.txt  aug_30.txt  aug_33.txt  (+2 more)
models/: events.py
multi_tool_agent/: agent.py
sidepanel-ui/: package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
sidepanel-ui/public/: manifest.json
sidepanel-ui/src/: App.tsx  StreamProvider.tsx  background.ts  content.ts  main.tsx  manifest.json
(+39 files in other folders)
